# BExplorer

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.rs
.github/workflows/: build-installers.yml  ci.yml
assets/linux/: bexplorer.desktop  io.github.BryamContreras.BExplorer.metainfo.xml  io.github.BryamContreras.BExplorer.policy
assets/windows/: bexplorer.rc
docs/es/: README.md
scripts/linux/: install-deb.sh  package.sh  validate-deb.sh  validate-rpm.sh
scripts/windows/: BExplorer.iss  package.ps1
src/: main.rs  preview.rs
src/app/: commands.rs  config.rs  mod.rs  session.rs  state.rs  thumbnail_data.rs
src/app/state/: entry_utils.rs  navigation.rs  network.rs  selection.rs  thumbnail.rs  types.rs
src/fs/: archive.rs  archive_listing.rs  compare.rs  defender.rs  explorer.rs  hash.rs  mod.rs  operations.rs  portable.rs  properties.rs  search.rs  transfer_queue.rs  watcher.rs
src/fs/archive/: seven_zip.rs  types.rs  zip.rs
src/fs/explorer/: storage.rs
src/iced_ui/: advanced.rs  file_actions.rs  helpers.rs  interaction.rs  mod.rs  navigation.rs  properties.rs  search_state.rs  state.rs  update.rs  view.rs
src/iced_ui/helpers/: colors.rs  controls.rs  ordering.rs  runtime.rs  sidebar.rs  widgets.rs
src/iced_ui/interaction/: context.rs  file_drag.rs  layout.rs  menu_keyboard.rs  mod.rs  pointer_tabs.rs  selection.rs
src/iced_ui/view/: chrome.rs  dialogs.rs  drag_overlays.rs  files.rs  menus.rs  mod.rs  shortcuts.rs
src/iced_ui/view/dialogs/: about.rs  appearance.rs  archive_jobs.rs  confirmations.rs  defender.rs  error.rs  format.rs  mod.rs  properties.rs  settings.rs  transfer_progress.rs
src/iced_ui/view/files/: entries.rs  grid.rs  menus.rs  mod.rs  pane.rs  tables.rs
src/platform/: linux.rs  macos.rs  mod.rs  shell.rs  windows.rs
src/platform/linux/: gnome_blur.rs  icons.rs  kio.rs  kwin_blur.rs  storage_watch.rs  wayland_drag.rs
src/platform/shell/: clipboard.rs  defender.rs  disk.rs  elevation.rs  format.rs
src/platform/shell/format/: linux.rs
src/platform/windows/: drag_out.rs  drives.rs  icons.rs  keyboard.rs  network.rs  portable.rs  storage_watch.rs  util.rs  window.rs
src/ui/: action_bar.rs  bookmarks_bar.rs  command_palette.rs  dialogs.rs  file_table.rs  i18n.rs  icons.rs  mod.rs  sidebar.rs  status_bar.rs  tabs.rs  theme.rs  window_frame.rs
src/ui/dialogs/: archive_progress.rs  defender_progress.rs  transfer.rs
src/ui/file_table/: columns.rs  highlight.rs  path_bar.rs  preview.rs  text.rs
src/utils/: atomic_file.rs  errors.rs  log.rs  mod.rs  paths.rs
tools/: generate_icons.ps1  package_linux.sh  package_windows.ps1
