[package]
name = "bexplorer"
version = "0.1.0"
edition = "2024"
description = "BExplorer, a native Rust desktop file explorer MVP."
license = "MIT"

[dependencies]
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crc32fast = "1.5"
directories = "5"
eframe = "0.29"
egui_extras = "0.29"
flate2 = "1.1"
fs2 = "0.4"
hayro = { version = "0.7", features = ["embed-fonts"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
open = "5"
resvg = "0.45"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
trash = "5"
walkdir = "2.5"

[build-dependencies]
cc = "1"

[target.'cfg(windows)'.dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_Devices_PortableDevices",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_WNet",
    "Win32_System_DataExchange",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
window-vibrancy = "0.7"
raw-window-handle = "0.6"
