[package]
name = "bexplorer"
version = "0.1.0"
edition = "2024"
description = "BExplorer, a native Rust desktop file explorer MVP."
license = "MIT"

[dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crc32fast = "1.5"
directories = "5"
flate2 = "1.1"
fs2 = "0.4"
hayro = { version = "0.7", features = ["embed-fonts"] }
iced = { version = "0.14.0", features = ["svg", "image"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
md5 = "0.7"
open = "5"
raw-window-handle = "0.6"
resvg = "0.45"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
trash = "5"
walkdir = "2.5"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rustix = { version = "1.1", features = ["pipe"] }
smithay-clipboard = "0.7.3"
wayland-backend = { version = "0.3.15", features = ["client_system"] }
wayland-client = "0.31.14"
wayland-protocols-plasma = { version = "0.3.12", features = ["client"] }
wayland-sys = "0.31.11"
zbus = "=5.17.0"

[build-dependencies]
cc = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[patch.crates-io]
# Iced's Wayland clipboard owns the data-device that receives file drops.
# Keep the tiny extension in-tree so it can forward URI drops to BExplorer.
smithay-clipboard = { path = "vendor/smithay-clipboard" }

[profile.dev]
# `cargo run` is used during day-to-day development. A modest optimization
# level keeps the Iced renderer responsive without the rebuild cost of release.
opt-level = 1

[profile.dev.package."*"]
# Rendering, SVG and image dependencies account for most frame work; optimize
# them further while keeping application code easy to iterate on.
opt-level = 2

[target.'cfg(windows)'.dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_Devices_PortableDevices",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_WNet",
    "Win32_System_DataExchange",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ioctl",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
window-vibrancy = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
